RWD and bottom svg size modified to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,12 @@ body{
     font-family: 'Kumbh Sans', sans-serif;
     font-size:18px;
     background-color: hsl(185, 75%, 39%);
-    
 }
 
 .top{
     position :absolute;
     left:-20%;
     top:-90%;
-    transform: rotateX(30);
 }
 
 .bottom{
@@ -24,6 +22,7 @@ body{
     left:45%;
     top:50%;
     z-index: -1;
+    overflow: hidden;
 }
 .stats{
     float:left;
@@ -55,4 +54,12 @@ body{
     top:-50px;
     height: 10px;
 }
+
+@media only screen and (max-width:375px){
+    .bottom,.top{
+        display: none;
+    }
+}
+
+
 
